# EC523_Final_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
ExtraScripts/: ExpandingDataset.py  filtermetadata.py  get_characters.py  manualmanifest.py
artifacts/: README.md
configs/: compare_example.yaml  default.yaml  dinov3_lora.yaml  hf_vit_lora.yaml  lvface_download.yaml  scratch_vit.yaml  uni_full.yaml
data/: README.md
scripts/: build_index.py  download_hf.py  evaluate.py  prepare_danbooru.py  prepare_danbooru_clip_subset.py  query.py  query_text.py  run_deit_top500_experiment.py  run_deit_top500_experiment_v2.py  run_devise_text_search_top500.py  run_joint_clip_top500_experiment.py  run_system_test_top500_v2.py  scc_train_example.sh  serve.py  train.py  train_joint_clip.py
src/who_is_this_anime_girl/: __init__.py  danbooru.py  data.py  devise.py  evaluate.py  hf_download.py  index.py  infer.py  joint_clip.py  losses.py  metrics.py  model.py  reporting.py  train.py  utils.py  web_app.py
src/who_is_this_anime_girl/static/: app.js  index.html  styles.css
